Moved models to client. interface endpoint
